debug - false and add static-map to .ini file

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,4 +1,4 @@
 [uwsgi]
 http-socket = 0:8337
 module = moringa.wsgi:application
-static-map = static=/home/ubuntu/django/moringa/static
+--static-map=/static=/home/ubuntu/test4/moringa/static
